@@ -30,7 +30,7 @@
 class SingleInstanceClass
 {
 	public:
-		SingleInstanceClass(QApplication *app,bool forcem=false);
+		SingleInstanceClass(QApplication *app,QCommandLineParser	*parser);
 		~SingleInstanceClass();
 
 		long			getSIWorkSpace(void);
@@ -40,6 +40,8 @@ class SingleInstanceClass
 		QApplication	*app;
 		int				workspace=-1;
 		bool			isOnX11=true;
+		int				queueID=-1;
+
 	private:
 		bool			deleteComfiles=false;
 		QFile			fileMsg;
