@@ -74,7 +74,7 @@ struct msgStruct
 	char mText[MAXMSGSIZE];
 };
 
-enum msgActions {OPENFILE=100,SAVEFILE,QUITAPP,ACTIVATEAPP};
+enum msgActions {OPENFILE=100,SAVEFILE,QUITAPP,ACTIVATEAPP,OPENSESSION};
 
 #define MAXTEXTWIDTH 500
 
